fix: Sidebar icons and collapse btn

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -37,6 +37,9 @@ body {
 }
 
 .ant-layout-sider-trigger {
-  width: 236px !important;
+  width: 240px !important;
   z-index: 1000 !important;
+  background-color: var(--#{$prefix}sidebar-collapse-color) !important;
+  border: 1px solid var(--#{$prefix}social-border-color);
+  border-radius: 4px;
 }
