--- a/src/assets/styles/variables/_colors-light.scss
+++ b/src/assets/styles/variables/_colors-light.scss
@@ -183,7 +183,11 @@ $icon-logo-bg-color: $turquoise;
 $icon-logo-bg-hover: $aquamarine;
 $icon-secondary-bg-color: $iceberg;
 $icon-secondary-bg-hover: $geyser;
+
+// Sidebar
 $sidebar-active-color: $springGreen;
+$sidebar-collapse-color: $chineseBlack;
+
 $arrow-color: $turquoise;
 
 // Modal
@@ -325,6 +329,7 @@ $theme-colors: (
     "info-op-01": $info-op-01,
 
     "sidebar-active-color": $sidebar-active-color,
+    "sidebar-collapse-color": $sidebar-collapse-color,
 
     "white": $white,
     "black": $black,
